--- a/index.html
+++ b/index.html
@@ -2,13 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta
+    name="viewport"
+    content="
+      width=device-width,
+      user-scalable=no,
+      initial-scale=1.0,
+      maximum-scale=1.0,
+      minimum-scale=1.0
+    "
+  >
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
   <title>Moyo header</title>
-  <link rel="stylesheet" href="./style.css">
+  <link
+    rel="stylesheet"
+    href="./style.css"
+  >
 </head>
 <body>
-  <h1>Moyo header</h1>
+
+<header>
+  <img
+    class="moyo_logo"
+    src="./images/logo.png"
+    alt="logo"
+  >
+  <nav>
+    <ul class="ul_nav">
+      <li class="li_nav">
+        <a
+          href="#"
+          class="is-active head_links"
+        >
+          Apple
+        </a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Samsung</a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Смартфоны и телефоны</a>
+      </li>
+      <li class="li_nav"><a
+        href="#"
+        class="head_links"
+        data-qa="hover"
+      >
+        Ноутбуки и компьютеры
+      </a></li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Гаджеты</a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Планшеты</a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Фото</a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">Видео</a>
+      </li>
+    </ul>
+    </nav>
+</header>
+
 </body>
 </html>
