deploy static content

--- a/index.html
+++ b/index.html
@@ -41,29 +41,43 @@
         </a>
       </li>
       <li class="li_nav">
-        <a href="#" class="head_links">Samsung</a>
+        <a href="#" class="head_links">
+          Samsung
+        </a>
       </li>
       <li class="li_nav">
-        <a href="#" class="head_links">Смартфоны и телефоны</a>
-      </li>
-      <li class="li_nav"><a
-        href="#"
-        class="head_links"
-        data-qa="hover"
-      >
-        Ноутбуки и компьютеры
-      </a></li>
-      <li class="li_nav">
-        <a href="#" class="head_links">Гаджеты</a>
+        <a href="#" class="head_links">
+          Смартфоны и телефоны
+        </a>
       </li>
       <li class="li_nav">
-        <a href="#" class="head_links">Планшеты</a>
+        <a
+          href="#"
+          class="head_links"
+          data-qa="hover"
+        >
+          Ноутбуки и компьютеры
+        </a>
       </li>
       <li class="li_nav">
-        <a href="#" class="head_links">Фото</a>
+        <a href="#" class="head_links">
+          Гаджеты
+        </a>
       </li>
       <li class="li_nav">
-        <a href="#" class="head_links">Видео</a>
+        <a href="#" class="head_links">
+          Планшеты
+        </a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">
+          Фото
+        </a>
+      </li>
+      <li class="li_nav">
+        <a href="#" class="head_links">
+          Видео
+        </a>
       </li>
     </ul>
     </nav>
