--- a/index.html
+++ b/index.html
@@ -31,51 +31,51 @@
     alt="logo"
   >
   <nav>
-    <ul class="ul_nav">
-      <li class="li_nav">
+    <ul class="navigationBox">
+      <li class="navigationList">
         <a
           href="#"
-          class="is-active head_links"
+          class="is-active navigation_links"
         >
           Apple
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Samsung
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Смартфоны и телефоны
         </a>
       </li>
-      <li class="li_nav">
+      <li class="navigationList">
         <a
           href="#"
-          class="head_links"
+          class="navigation_links"
           data-qa="hover"
         >
           Ноутбуки и компьютеры
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Гаджеты
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Планшеты
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Фото
         </a>
       </li>
-      <li class="li_nav">
-        <a href="#" class="head_links">
+      <li class="navigationList">
+        <a href="#" class="navigation_links">
           Видео
         </a>
       </li>
